syntax = "proto3";

option go_package = "./grpc/grpcgen/gogen;gogen";


package multirunner;

service GoRunner { rpc RunGo(GoRunRequest) returns (GoRunResponse); }

message GoRunRequest { 
  string code = 1;
}

message GoRunResponse {
  string error = 1;
  string output = 2;
}
