syntax = "proto3";

option go_package = "./internal/grpc/jsgen;jsgen";

package jsrunner;

service JsRunner { rpc RunJs(JsRunRequest) returns (JsRunResponse); }

message JsRunRequest { string code = 1; }

message JsRunResponse {
  string error = 1;
  string output = 2;
}
